--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT = 8000
-MONGO_URL = mongodb+srv://ruchika:1234@cluster0.ez2v18m.mongodb.net/fashion_trends
+MONGO_URL = mongodb+srv://ruchika:<password>@cluster0.ez2v18m.mongodb.net/fashion_trends
